loopdowhile.Poucet2.scala.error
Compilation error:
Poucet2:4: error: ';' expected but '{' found.
while (crossing == true) {
                         ^